# Project1-weather-cli

./: .gitignore  README.md  pyproject.toml
data/: run_2025-09-27.csv  weather_log.csv
james_weather_cli.egg-info/: PKG-INFO  SOURCES.txt
week2/: chart_weather.py  hello.py  http_utils.py  settings.py  weather_cli.py  weather_one_city.py
week2/tests/: check_env.py
